--- a/sass/main-page/sections/_hero.scss
+++ b/sass/main-page/sections/_hero.scss
@@ -1,23 +1,21 @@
-.hero-section {
-    background-image: linear-gradient(
-        rgba(47, 48, 58, 0.4),
-        rgba(47, 48, 58, 0.4)
-      ),
-      url(../img/working.webp);
-    background-repeat: no-repeat;
-    background-size: cover;
-    padding-bottom: 200px;
-    padding-top: 200px;
-  }
-  
-  .hero-container {
+.hero {
+  background-image: linear-gradient(
+      rgba(47, 48, 58, 0.4),
+      rgba(47, 48, 58, 0.4)
+    ),
+    url(../img/working.webp);
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding-bottom: 200px;
+  padding-top: 200px;
+
+  &__container {
     display: flex;
     align-items: center;
     flex-direction: column;
-  
   }
-  
-  .hero-title {
+
+  &__title {
     color: $accent-color;
     text-align: center;
     font-size: 44px;
@@ -31,8 +29,8 @@
     animation-name: from-left;
     animation-duration: 1s;
   }
-  
-  .hero-button {
+
+  &__button {
     color: $accent-color;
     text-align: center;
     font-family: Roboto;
@@ -44,7 +42,7 @@
     height: 50px;
     flex-shrink: 0;
     border-radius: 4px;
-    background: $hover-color;
+    background-color: $hover-color;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
     cursor: pointer;
     padding: 10px 32px 10px 32px;
@@ -52,3 +50,5 @@
     animation-duration: from-right;
     animation-duration: 1s;
   }
+}
+
