--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -127,48 +127,44 @@ input {
   animation-duration: 1s;
   border: #ececec 1px solid;
 }
-
-.header-container {
+.header__container {
   display: flex;
   align-items: center;
 }
-
-.header-logo {
+.header__logo {
   display: block;
   text-decoration: none;
 }
-
-.header-logo:focus {
+.header__logo:focus {
   display: block;
   text-decoration: none;
 }
-
-.header-logo1 {
+.header__logo1 {
   color: #2196f3;
+  font-family: Raleway;
   font-size: 26px;
   line-height: normal;
   font-weight: 700;
   letter-spacing: 0.03em;
-  font-family: Raleway;
 }
-
-.header-logo2 {
+.header__logo2 {
   color: #000;
+  font-family: Raleway;
   font-size: 26px;
   line-height: normal;
   font-weight: 700;
   letter-spacing: 0.03em;
-  font-family: Raleway;
 }
-
-.header-list {
+.header__list {
   display: flex;
   gap: 50px;
   margin-right: 344px;
   margin-left: auto;
 }
-
-.header-link {
+.header__item:hover .header__link::after {
+  opacity: 1;
+}
+.header__link {
   color: #212121;
   font-size: 14px;
   font-weight: 500;
@@ -181,24 +177,21 @@ input {
   transition-duration: 250ms;
   font-family: Roboto;
 }
-
-.header-link:hover {
+.header__link:hover {
   color: #2196f3;
   font-size: 14px;
   font-weight: 500;
   line-height: normal;
   letter-spacing: 0.02em;
 }
-
-.header-link:focus {
+.header__link:focus {
   color: #2196f3;
   font-size: 14px;
   font-weight: 500;
   line-height: normal;
   letter-spacing: 0.02em;
 }
-
-.header-link::after {
+.header__link::after {
   display: block;
   background-color: #2196f3;
   position: absolute;
@@ -213,17 +206,11 @@ input {
   transition-duration: 250ms;
   transition-property: #2196f3;
 }
-
-.header-item:hover .header-link::after {
-  opacity: 1;
-}
-
-.header-autorisations {
+.header__autorisations {
   display: flex;
   gap: 50px;
 }
-
-.header-item2 {
+.header__item2 {
   display: flex;
   align-items: center;
   color: #757575;
@@ -234,17 +221,14 @@ input {
   transition-duration: 250ms;
   transition-property: color;
 }
-
-.header-item2:hover {
+.header__item2:hover {
   color: #2196f3;
   cursor: pointer;
 }
-
-.header-item2:focus {
+.header__item2:focus {
   color: #2196f3;
 }
-
-.header-contacts {
+.header__contacts {
   color: #757575;
   font-size: 14px;
   font-weight: 500;
@@ -258,24 +242,21 @@ input {
   transition-duration: 250ms;
   font-family: Roboto;
 }
-
-.header-contacts:hover {
+.header__contacts:hover {
   color: #2196f3;
   font-size: 14px;
   font-weight: 500;
   line-height: normal;
   letter-spacing: 0.02em;
 }
-
-.header-contacts:focus {
+.header__contacts:focus {
   color: #2196f3;
   font-size: 14px;
   font-weight: 500;
   line-height: normal;
   letter-spacing: 0.02em;
 }
-
-.header-icon-mail {
+.header__mail {
   width: 16px;
   height: 12px;
   margin-right: 10px;
@@ -284,8 +265,7 @@ input {
   transition-property: color, fill;
   transition-duration: 250ms;
 }
-
-.header-icon-phone {
+.header__phone {
   width: 10px;
   height: 16px;
   margin-right: 10px;
@@ -294,36 +274,27 @@ input {
   transition-property: color, fill;
   transition-duration: 250ms;
 }
-
-.header-autorisations .header-item2:hover .header-icon-mail,
-.header-autorisations .header-item2:hover .header-icon-phone,
-.header-autorisations .header-item2:hover .header-contacts,
-.header-contacts:focus .header-icon-mail,
-.header-contacts:focus .header-icon-phone,
-.header-contacts:focus {
+.header__autorisations .header__item2:hover .header__mail, .header__autorisations .header__item2:hover .header__phone, .header__autorisations .header__item2:hover .header__contacts, .header__contacts:focus .header__mail, .header__contacts:focus .header__phone, .header__contacts:focus {
   fill: #2196f3;
   color: #2196f3;
   cursor: pointer;
 }
 
-.hero-section {
+.hero {
   padding-top: 94px;
   padding-bottom: 94px;
 }
-
-.hero-list {
+.hero__list {
   display: flex;
   justify-content: center;
   gap: 8px;
   margin-bottom: 50px;
 }
-
-.hero-item {
+.hero__item {
   animation-duration: 1s;
   animation-name: from-up;
 }
-
-.hero-button {
+.hero__button {
   color: #212121;
   text-align: center;
   font-size: 16px;
@@ -338,9 +309,7 @@ input {
   transition-property: background-color, box-shadow;
   transition-duration: 250ms;
 }
-
-.hero-button:hover,
-.hero-button:focus {
+.hero__button:hover, .hero__button:focus {
   color: #ffffff;
   text-align: center;
   font-size: 16px;
@@ -349,8 +318,7 @@ input {
   background-color: #2196f3;
   box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.1215686275), 0px 1px 2px 0px rgba(0, 0, 0, 0.0784313725), 0px 3px 1px 0px rgba(0, 0, 0, 0.1019607843);
 }
-
-.hero-posters {
+.hero__posters {
   display: flex;
   align-items: center;
   flex-wrap: wrap;
@@ -358,27 +326,37 @@ input {
        column-gap: 30px;
   row-gap: 30px;
 }
-
-.hero-link {
+.hero__link {
   text-decoration: none;
   display: block;
   position: relative;
 }
-
-.hero-link:focus {
+.hero__link:focus {
   text-decoration: none;
   outline: none;
 }
-
-.hero-overlay {
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-property: background-color, transform;
-  transition-duration: 250ms;
-  transform: scaleY(0);
+.hero__link:first-child, .hero__link:nth-child(4), .hero__link:nth-child(7) {
+  animation-name: from-left;
+  animation-duration: 1s;
 }
-
-.hero-poster:hover .hero-overlay,
-.hero-poster:focus .hero-overlay {
+.hero__link:nth-child(2) {
+  animation-name: from-up;
+  animation-duration: 1s;
+}
+.hero__link:nth-child(3), .hero__link:nth-child(6), .hero__link:nth-child(9) {
+  animation-name: from-right;
+  animation-duration: 1s;
+}
+.hero__link:nth-child(8) {
+  animation-name: from-down;
+  animation-duration: 1s;
+}
+.hero__poster {
+  flex-basis: calc((100% - 60px) / 3);
+  background-color: #ffffff;
+  border: 1px solid #eeeeee;
+}
+.hero__poster:hover .hero__overlay, .hero__poster:focus .hero__overlay {
   width: 370px;
   height: 294px;
   background-color: rgba(33, 150, 243, 0.9);
@@ -386,9 +364,7 @@ input {
   transform: scaleY(1);
   transform-origin: bottom;
 }
-
-.hero-poster:hover .hero-overlay-text,
-.hero-poster:focus .hero-overlay-text {
+.hero__poster:hover .hero__overlaytext, .hero__poster:focus .hero__overlaytext {
   color: #ffffff;
   font-size: 18px;
   font-style: normal;
@@ -399,41 +375,21 @@ input {
   opacity: 1;
   font-family: Roboto;
 }
-
-.hero-overlay-text {
+.hero__poster:hover, .hero__link:focus {
+  box-shadow: 1px 4px 6px 0px rgba(0, 0, 0, 0.1607843137), 0px 4px 4px 0px rgba(0, 0, 0, 0.0588235294), 0px 1px 1px 0px rgba(0, 0, 0, 0.1215686275);
+  cursor: pointer;
+}
+.hero__overlay {
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-property: background-color, transform;
+  transition-duration: 250ms;
+  transform: scaleY(0);
+}
+.hero__overlaytext {
   position: absolute;
   top: 63px;
   left: 23px;
   opacity: 0;
-}
-
-.hero-poster {
-  flex-basis: calc((100% - 60px) / 3);
-  background-color: #ffffff;
-  border: 1px solid #eeeeee;
-}
-
-.hero-link:first-child, .hero-link:nth-child(4), .hero-link:nth-child(7) {
-  animation-name: from-left;
-  animation-duration: 1s;
-}
-
-.hero-link:nth-child(2) {
-  animation-name: from-up;
-  animation-duration: 1s;
-}
-
-.hero-link:nth-child(3), .hero-link:nth-child(6), .hero-link:nth-child(9) {
-  animation-name: from-right;
-  animation-duration: 1s;
-}
-
-.hero-link:nth-child(8) {
-  animation-name: from-down;
-  animation-duration: 1s;
-}
-
-.hero-subtext {
   color: #ffffff;
   font-family: Roboto;
   font-size: 18px;
@@ -442,14 +398,7 @@ input {
   line-height: 28px;
   letter-spacing: 0.54px;
 }
-
-.hero-poster:hover,
-.hero-link:focus {
-  box-shadow: 1px 4px 6px 0px rgba(0, 0, 0, 0.1607843137), 0px 4px 4px 0px rgba(0, 0, 0, 0.0588235294), 0px 1px 1px 0px rgba(0, 0, 0, 0.1215686275);
-  cursor: pointer;
-}
-
-.hero-title {
+.hero__title {
   color: #212121;
   font-size: 18px;
   font-weight: 700;
@@ -461,8 +410,7 @@ input {
   padding-right: 24px;
   font-family: Roboto;
 }
-
-.hero-text {
+.hero__work {
   color: #757575;
   font-size: 16px;
   font-weight: 400;
@@ -474,35 +422,31 @@ input {
   font-family: Roboto;
 }
 
-footer {
+.footer {
   background-color: #2f303a;
   padding-top: 60px;
   padding-bottom: 60px;
   animation-name: from-down;
   animation-duration: 1s;
 }
-
-.footer-container {
+.footer__container {
   flex-direction: row;
   justify-content: start;
   align-content: normal;
   row-gap: 20px;
   display: flex;
 }
-
-.footer-logo {
+.footer__logo {
   display: block;
   margin-bottom: 20px;
   text-decoration: none;
 }
-
-.footer-logo:focus {
+.footer__logo:focus {
   display: block;
   margin-bottom: 20px;
   text-decoration: none;
 }
-
-.footer-logo1 {
+.footer__logo1 {
   color: #2196f3;
   font-size: 26px;
   font-family: Raleway;
@@ -511,10 +455,8 @@ footer {
   letter-spacing: 0.03em;
   margin-bottom: 20px;
   word-wrap: break-word;
-  font-family: Raleway;
 }
-
-.footer-logo2 {
+.footer__logo2 {
   color: #ffffff;
   font-size: 26px;
   font-family: Raleway;
@@ -522,10 +464,8 @@ footer {
   font-weight: 700;
   letter-spacing: 0.03em;
   margin-bottom: 20px;
-  font-family: Raleway;
 }
-
-.footer-address {
+.footer__address {
   color: #ffffff;
   font-size: 14px;
   font-weight: 400;
@@ -537,8 +477,7 @@ footer {
   display: block;
   font-family: Roboto;
 }
-
-.footer-email {
+.footer__email {
   color: #757575;
   font-size: 14px;
   font-weight: 400;
@@ -550,8 +489,7 @@ footer {
   color: rgba(255, 255, 255, 0.6);
   font-family: Roboto;
 }
-
-.footer-phone {
+.footer__phone {
   color: #757575;
   font-size: 14px;
   font-weight: 400;
@@ -561,12 +499,10 @@ footer {
   color: rgba(255, 255, 255, 0.6);
   font-family: Roboto;
 }
-
-.footer-icons {
+.footer__icons {
   margin-left: 70px;
 }
-
-.footer-icon-subtitle {
+.footer__subtitle {
   color: #ffffff;
   font-size: 14px;
   font-style: normal;
@@ -577,14 +513,12 @@ footer {
   margin-bottom: 20px;
   font-family: Roboto;
 }
-
-.footer-icon-list {
+.footer__least {
   display: flex;
   -moz-column-gap: 10px;
        column-gap: 10px;
 }
-
-.footer-contacts {
+.footer__contacts {
   width: 44px;
   height: 44px;
   flex-shrink: 0;
@@ -595,13 +529,10 @@ footer {
   transition-property: background-color;
   transition-duration: 250ms;
 }
-
-.footer-contacts:hover,
-.footer-contacts:focus {
+.footer__contacts:hover, .footer__contacts:focus {
   background-color: #2196f3;
 }
-
-.footer-icon {
+.footer__icon {
   width: 20px;
   height: 20px;
   fill: #ffffff;
@@ -609,16 +540,11 @@ footer {
   padding: 12px;
 }
 
-.basement-form {
+.basement__form {
   margin-left: 93px;
   width: 570px;
 }
-
-.basement-form-container {
-  display: flex;
-}
-
-.basement-form-title {
+.basement__title {
   color: #ffffff;
   font-size: 14px;
   font-style: normal;
@@ -629,8 +555,10 @@ footer {
   margin-bottom: 20px;
   font-family: Roboto;
 }
-
-.basement-form-input {
+.basement__container {
+  display: flex;
+}
+.basement__input {
   width: 358px;
   height: 50px;
   flex-shrink: 0;
@@ -642,8 +570,7 @@ footer {
   padding-left: 16px;
   color: #fff;
 }
-
-.basement-form-input::-moz-placeholder {
+.basement__input::-moz-placeholder {
   color: rgba(255, 255, 255, 0.6);
   font-family: Roboto;
   font-size: 16px;
@@ -652,8 +579,7 @@ footer {
   line-height: 20px;
   letter-spacing: 0.48px;
 }
-
-.basement-form-input::placeholder {
+.basement__input::placeholder {
   color: rgba(255, 255, 255, 0.6);
   font-family: Roboto;
   font-size: 16px;
@@ -662,8 +588,7 @@ footer {
   line-height: 20px;
   letter-spacing: 0.48px;
 }
-
-.basement-form-button {
+.basement__button {
   width: 200px;
   height: 50px;
   flex-shrink: 0;
@@ -683,8 +608,7 @@ footer {
   justify-content: center;
   align-items: center;
 }
-
-.basement-form-icon {
+.basement__icon {
   width: 24px;
   height: 24px;
   margin-left: 10px;
