--- a/sass/main-page/sections/_customers.scss
+++ b/sass/main-page/sections/_customers.scss
@@ -1,73 +1,76 @@
-.customers-section {
+.customers {
   padding-top: 94px;
   padding-bottom: 94px;
+
+  &__title {
+    color: $text-color;
+    text-align: center;
+    font-family: Roboto;
+    font-size: 36px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    letter-spacing: 1.08px;
+    margin-bottom: 50px;
+  }
+
+  &__icons {
+    display: flex;
+    column-gap: 30px;
+  }
+
+  &__contacts {
+    width: 170px;
+    height: 92px;
+    flex-shrink: 0;
+    border-radius: 4px;
+    border: 1px solid #afb1b8;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition-property: border, fill;
+    transition-duration: 250ms;
+
+    &:hover,
+    &:focus {
+      border: $hover-color 1px solid;
+    }
+
+    &:hover .customers-icon,
+    &:focus .customers-icon {
+      fill: $hover-color;
+      border: 1px solid $hover-color;
+    }
+
+    &:first-child,
+    &:nth-last-child(4),
+    &:nth-last-child(5) {
+      animation-name: from-left;
+      animation-duration: 1s;
+    }
+
+    &:last-child,
+    &:nth-last-child(2),
+    &:nth-last-child(3) {
+      animation-name: from-right;
+      animation-duration: 1s;
+    }
+  }
+
+  &__icon {
+    width: 106px;
+    height: 60px;
+    flex-shrink: 0;
+    padding: 16px 32px;
+    fill: #afb1b8;
+    cursor: pointer;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition-property: fill;
+    transition-duration: 250ms;
+
+    &:hover {
+      fill: $hover-color;
+    }    
+  }
 }
 
-.customers-title {
-  color: $text-color;
-  text-align: center;
-  font-family: Roboto;
-  font-size: 36px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: normal;
-  letter-spacing: 1.08px;
-  margin-bottom: 50px;
-}
 
-.customers-icons {
-  display: flex;
-  column-gap: 30px;
-}
 
-.customers-contacts {
-  width: 170px;
-  height: 92px;
-  flex-shrink: 0;
-  border-radius: 4px;
-  border: 1px solid #afb1b8;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-property: border, fill;
-  transition-duration: 250ms;
-}
-
-.customers-contacts:hover,
-.customers-contacts:focus {
-  border: $hover-color 1px solid;
-}
-
-.customers-contacts:hover .customers-icon,
-.customers-contacts:focus .customers-icon {
-  fill: $hover-color;
-  border: 1px solid $hover-color;
-}
-
-.customers-contacts:first-child,
-.customers-contacts:nth-last-child(4),
-.customers-contacts:nth-last-child(5) {
-  animation-name: from-left;
-  animation-duration: 1s;
-}
-
-.customers-contacts:last-child,
-.customers-contacts:nth-last-child(2),
-.customers-contacts:nth-last-child(3) {
-  animation-name: from-right;
-  animation-duration: 1s;
-}
-
-.customers-icon {
-  width: 106px;
-  height: 60px;
-  flex-shrink: 0;
-  padding: 16px 32px;
-  fill: #afb1b8;
-  cursor: pointer;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-property: fill;
-  transition-duration: 250ms;
-}
-
-.customers-icon:hover {
-  fill: $hover-color;
-}
