--- a/sass/portfolio-page/sections/_hero.scss
+++ b/sass/portfolio-page/sections/_hero.scss
@@ -1,21 +1,20 @@
-.hero-section {
-    padding-top: 94px;
-    padding-bottom: 94px;
-  }
-  
-  .hero-list {
+.hero {
+  padding-top: 94px;
+  padding-bottom: 94px;
+
+  &__list {
     display: flex;
     justify-content: center;
     gap: 8px;
     margin-bottom: 50px;
   }
-  
-  .hero-item {
+
+  &__item {
     animation-duration: 1s;
     animation-name: from-up;
   }
-  
-  .hero-button {
+
+  &__button {
     color: $text-color;
     text-align: center;
     font-size: 16px;
@@ -29,48 +28,71 @@
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     transition-property: background-color, box-shadow;
     transition-duration: 250ms;
+
+    &:hover,
+    &:focus {
+      color: $accent-color;
+      text-align: center;
+      font-size: 16px;
+      line-height: 1.6;
+      border-radius: 4px;
+      background-color: $hover-color;
+      box-shadow: 0px 2px 2px 0px #0000001f, 0px 1px 2px 0px #00000014,
+        0px 3px 1px 0px #0000001a;
+    }
   }
-  
-  .hero-button:hover,
-  .hero-button:focus {
-    color: $accent-color;
-    text-align: center;
-    font-size: 16px;
-    line-height: 1.6;
-    border-radius: 4px;
-    background-color: $hover-color;
-    box-shadow: 0px 2px 2px 0px #0000001f, 0px 1px 2px 0px #00000014,
-      0px 3px 1px 0px #0000001a;
-  }
-  
-  .hero-posters {
+
+  &__posters {
     display: flex;
     align-items: center;
     flex-wrap: wrap;
     column-gap: 30px;
     row-gap: 30px;
   }
-  
-  .hero-link {
+
+  &__link {
     text-decoration: none;
     display: block;
     position: relative;
+
+    &:focus {
+      text-decoration: none;
+      outline: none;
+    }
+
+    &:first-child,
+    &:nth-child(4),
+    &:nth-child(7) {
+      animation-name: from-left;
+      animation-duration: 1s;
+    }
+
+    &:nth-child(2) {
+      animation-name: from-up;
+      animation-duration: 1s;
+    }
+
+    &:nth-child(3),
+    &:nth-child(6),
+    &:nth-child(9) {
+      animation-name: from-right;
+      animation-duration: 1s;
+    }
+
+    &:nth-child(8) {
+      animation-name: from-down;
+      animation-duration: 1s;
+    }
   }
-  
-  .hero-link:focus {
-    text-decoration: none;
-    outline: none;
+
+  &__poster {
+    flex-basis: calc((100% - 2 * 30px) / 3);
+    background-color: $accent-color;
+    border: 1px solid #eeeeee;
   }
-  
-  .hero-overlay {
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-    transition-property: background-color, transform;
-    transition-duration: 250ms;
-    transform: scaleY(0);
-  }
-  
-  .hero-poster:hover .hero-overlay,
-  .hero-poster:focus .hero-overlay {
+
+  &__poster:hover &__overlay,
+  &__poster:focus &__overlay {
     width: 370px;
     height: 294px;
     background-color: rgba(33, 150, 243, 0.9);
@@ -78,9 +100,9 @@
     transform: scaleY(1);
     transform-origin: bottom;
   }
-  
-  .hero-poster:hover .hero-overlay-text,
-  .hero-poster:focus .hero-overlay-text {
+
+  &__poster:hover &__overlaytext,
+  &__poster:focus &__overlaytext {
     color: $accent-color;
     font-size: 18px;
     font-style: normal;
@@ -91,41 +113,26 @@
     opacity: 1;
     font-family: Roboto;
   }
-  
-  .hero-overlay-text {
+
+  &__poster:hover,
+  &__link:focus {
+    box-shadow: 1px 4px 6px 0px #00000029, 0px 4px 4px 0px #0000000f,
+      0px 1px 1px 0px #0000001f;
+    cursor: pointer;
+  }
+
+  &__overlay {
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition-property: background-color, transform;
+    transition-duration: 250ms;
+    transform: scaleY(0);
+  }
+
+  &__overlaytext {
     position: absolute;
     top: 63px;
     left: 23px;
     opacity: 0;
-  }
-  
-  .hero-poster {
-    flex-basis: calc((100% - 2 * 30px) / 3) ;
-    background-color: $accent-color;
-    border: 1px solid #eeeeee;
-  }
-  
-  .hero-link:first-child, .hero-link:nth-child(4), .hero-link:nth-child(7) {
-    animation-name: from-left;
-    animation-duration: 1s;
-  }
-  
-  .hero-link:nth-child(2) {
-    animation-name: from-up;
-    animation-duration: 1s;
-  }
-  
-  .hero-link:nth-child(3), .hero-link:nth-child(6), .hero-link:nth-child(9) {
-    animation-name: from-right;
-    animation-duration: 1s;
-  }
-  
-  .hero-link:nth-child(8) {
-    animation-name: from-down;
-    animation-duration: 1s;
-  }
-  
-  .hero-subtext {
     color: $accent-color;
     font-family: Roboto;
     font-size: 18px;
@@ -134,15 +141,8 @@
     line-height: 28px;
     letter-spacing: 0.54px;
   }
-  
-  .hero-poster:hover,
-  .hero-link:focus {
-    box-shadow: 1px 4px 6px 0px #00000029, 0px 4px 4px 0px #0000000f,
-      0px 1px 1px 0px #0000001f;
-    cursor: pointer;
-  }
-  
-  .hero-title {
+
+  &__title {
     color: $text-color;
     font-size: 18px;
     font-weight: 700;
@@ -154,8 +154,8 @@
     padding-right: 24px;
     font-family: Roboto;
   }
-  
-  .hero-text {
+
+  &__work {
     color: $additional-text-color;
     font-size: 16px;
     font-weight: 400;
@@ -166,3 +166,4 @@
     padding-right: 24px;
     font-family: Roboto;
   }
+}
